error fixed in pom